syntax = "proto3";

package mantrae.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

service AuditLogService {
  rpc ListAuditLogs(ListAuditLogsRequest) returns (ListAuditLogsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}

message AuditLog {
  int64 id = 1;
  int64 profile_id = 2;
  string profile_name = 3;
  string user_id = 4;
  string user_name = 5;
  string agent_id = 6;
  string agent_name = 7;
  string event = 8;
  string details = 9;
  google.protobuf.Timestamp created_at = 10;
}

message ListAuditLogsRequest {
  optional int64 limit = 1 [(buf.validate.field).cel = {
    id: "limit.valid"
    message: "limit must be either -1 or greater than 0"
    expression: "this == -1 || this > 0"
  }];
  optional int64 offset = 2 [(buf.validate.field).int64.gte = 0];
}
message ListAuditLogsResponse {
  repeated AuditLog audit_logs = 1;
  int64 total_count = 2;
}
